[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/heroe/mHero_3.png" type="Texture" id=1]
[ext_resource path="res://Assets/heroe/mHero_1.png" type="Texture" id=2]
[ext_resource path="res://Assets/heroe/mHero_4.png" type="Texture" id=3]
[ext_resource path="res://Assets/heroe/mHero_2.png" type="Texture" id=4]
[ext_resource path="res://Hud.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "Stand",
"speed": 5.0
} ]

[node name="Hud" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="Control" type="Control" parent="."]
margin_left = 376.0
margin_top = 24.0
margin_right = 416.0
margin_bottom = 39.0

[node name="Panel" type="Panel" parent="Control"]
margin_right = 40.0
margin_bottom = 16.0

[node name="live1" type="AnimatedSprite" parent="Control/Panel"]
position = Vector2( 8, 8 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 1 )
animation = "Stand"
frame = 1
playing = true

[node name="live2" type="AnimatedSprite" parent="Control/Panel"]
position = Vector2( 16, 8 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 1 )
animation = "Stand"
frame = 1
playing = true

[node name="live3" type="AnimatedSprite" parent="Control/Panel"]
position = Vector2( 24, 8 )
scale = Vector2( 0.4, 0.4 )
frames = SubResource( 1 )
animation = "Stand"
frame = 1
playing = true
